[package]
name = "erc20"
version = "0.1.0"
authors = ["Aleksey <alex.romanovich.ak@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]  # ✅ Ensures the project is compiled as a library (not a binary)
name = "erc20"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []
