[package]
name = "erc20"
version = "0.1.0"
authors = ["Aleksey <alex.romanovich.ak@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

# Remove the [lib] section entirely and replace it with this:
[contract]
name = "erc20"
version = "0.1.0"
authors = ["Aleksey <alex.romanovich.ak@gmail.com>"]

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []